<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RepoDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/boldTextStyle"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/noto_sans_tc_bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/boldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans_tc_bold"
        android:text="@string/repo_details"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:padding="@dimen/padding_large">

            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_width="@dimen/item_feed_profile_size"
                android:layout_height="@dimen/item_feed_profile_size"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/profile_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/margin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/avatar_iv"
                app:layout_constraintTop_toTopOf="@id/avatar_iv"
                tools:text="Repo name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:fontFamily="monospace"
                android:paddingTop="@dimen/margin_xsmall"
                android:textColor="@color/green_turquoise2"
                android:textSize="@dimen/font_small"
                app:layout_constraintLeft_toRightOf="@id/avatar_iv"
                app:layout_constraintTop_toBottomOf="@id/repo_name"
                tools:text="username" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:ellipsize="end"
                android:lineSpacingExtra="2dp"
                android:maxLines="2"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_xmedium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar_iv" />

            <LinearLayout
                android:id="@+id/item_fork_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/item_desc"
                android:gravity="center"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/last_update_date_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/last_updated"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/last_update_date_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_06_05_2022"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/progressLayout"
        layout="@layout/progressbar_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>